--- a/Index.html
+++ b/Index.html
@@ -2,190 +2,140 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Calculadora de Vectores</title>
+  <title>Producto Punto y Cruz</title>
   <style>
     body {
-      font-family: "Segoe UI", Arial, sans-serif;
-      text-align: center;
-      padding: 20px;
-      background: linear-gradient(135deg, #2193b0, #6dd5ed);
-      min-height: 100vh;
-      margin: 0;
+      font-family: Arial, sans-serif;
+      background: linear-gradient(135deg, #74ebd5, #ACB6E5);
       display: flex;
       justify-content: center;
       align-items: center;
+      height: 100vh;
+      margin: 0;
     }
-    .card {
+    .container {
       background: white;
+      padding: 30px;
       border-radius: 20px;
-      box-shadow: 0 6px 20px rgba(0,0,0,0.2);
-      padding: 25px;
-      max-width: 420px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.2);
+      max-width: 500px;
       width: 100%;
       text-align: center;
-      animation: fadeIn 0.7s ease-in-out;
     }
-    h1 {
-      color: #0d47a1;
-      margin-bottom: 15px;
+    h2 {
+      color: #333;
+      margin-bottom: 20px;
     }
-    label {
-      font-weight: bold;
-      display: block;
-      margin-top: 15px;
-      color: #1565c0;
-    }
-    input {
-      width: 70px;
-      margin: 5px;
-      padding: 8px;
+    select, input {
+      padding: 10px;
+      margin: 10px;
       border-radius: 10px;
       border: 1px solid #ccc;
-      text-align: center;
-      transition: 0.2s;
-    }
-    input:focus {
-      border-color: #42a5f5;
-      box-shadow: 0 0 5px #90caf9;
-      outline: none;
-    }
-    select {
-      margin: 10px;
-      padding: 8px;
-      font-size: 15px;
-      border-radius: 8px;
-      border: 1px solid #90caf9;
-      background: #e3f2fd;
-      transition: 0.2s;
-    }
-    select:focus {
-      border-color: #42a5f5;
-      outline: none;
+      font-size: 16px;
     }
     button {
-      margin-top: 20px;
-      padding: 12px 25px;
-      font-size: 16px;
-      border-radius: 30px;
+      padding: 12px 20px;
       border: none;
-      background: linear-gradient(135deg, #42a5f5, #1e88e5);
+      border-radius: 15px;
+      background: #4e73df;
       color: white;
-      font-weight: bold;
+      font-size: 16px;
       cursor: pointer;
-      transition: transform 0.2s, box-shadow 0.2s;
+      margin-top: 15px;
     }
     button:hover {
-      transform: scale(1.05);
-      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+      background: #2e59d9;
     }
-    .resultado {
-      margin-top: 25px;
+    .result {
+      margin-top: 20px;
       padding: 15px;
-      font-size: 20px;
+      border-radius: 10px;
+      background: #f1f5f9;
+      font-size: 18px;
       font-weight: bold;
-      color: #0d47a1;
-      background: #e3f2fd;
-      border-radius: 12px;
-      box-shadow: inset 0 2px 6px rgba(0,0,0,0.1);
     }
-    @keyframes fadeIn {
-      from {opacity: 0; transform: translateY(-10px);}
-      to {opacity: 1; transform: translateY(0);}
+    .inputs {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 10px;
+      margin-top: 15px;
     }
   </style>
 </head>
 <body>
-  <div class="card">
-    <h1>Calculadora de Vectores</h1>
+  <div class="container">
+    <h2>Producto Punto y Cruz</h2>
 
-    <label for="dimension">Dimensión:</label>
-    <select id="dimension" onchange="cambiarDimension()">
-      <option value="2">2D (x,y)</option>
-      <option value="3" selected>3D (x,y,z)</option>
-    </select>
-
-    <label for="operacion">Operación:</label>
+    <label>Operación:</label>
     <select id="operacion">
       <option value="punto">Producto Punto</option>
       <option value="cruz">Producto Cruz</option>
     </select>
 
-    <h3>Vector A</h3>
-    <input type="number" id="ax" placeholder="x1">
-    <input type="number" id="ay" placeholder="y1">
-    <input type="number" id="az" placeholder="z1">
+    <label>Dimensiones:</label>
+    <select id="dimension">
+      <option value="2">2D</option>
+      <option value="3">3D</option>
+    </select>
 
-    <h3>Vector B</h3>
-    <input type="number" id="bx" placeholder="x2">
-    <input type="number" id="by" placeholder="y2">
-    <input type="number" id="bz" placeholder="z2">
+    <div id="vectorInputs" class="inputs"></div>
 
-    <div>
-      <button onclick="calcular()">Calcular</button>
-    </div>
+    <button onclick="calcular()">Calcular</button>
 
-    <div class="resultado" id="resultado">Aquí aparecerá el resultado</div>
+    <div id="resultado" class="result"></div>
   </div>
 
   <script>
-    function cambiarDimension() {
-      let dim = document.getElementById("dimension").value;
-      let az = document.getElementById("az");
-      let bz = document.getElementById("bz");
+    const vectorInputs = document.getElementById("vectorInputs");
+    const dimensionSelect = document.getElementById("dimension");
+    const operacionSelect = document.getElementById("operacion");
 
-      if (dim == "2") {
-        az.style.display = "none";
-        bz.style.display = "none";
-      } else {
-        az.style.display = "inline";
-        bz.style.display = "inline";
+    function crearInputs() {
+      const dim = parseInt(dimensionSelect.value);
+      vectorInputs.innerHTML = "";
+      for (let v = 1; v <= 2; v++) {
+        for (let i = 1; i <= dim; i++) {
+          const input = document.createElement("input");
+          input.type = "number";
+          input.step = "any";
+          input.placeholder = `V${v}${i}`;
+          input.id = `v${v}${i}`;
+          vectorInputs.appendChild(input);
+        }
       }
     }
+
+    dimensionSelect.addEventListener("change", crearInputs);
+    operacionSelect.addEventListener("change", crearInputs);
+
+    crearInputs(); // inicializar
 
     function calcular() {
-      let dim = document.getElementById("dimension").value;
-      let operacion = document.getElementById("operacion").value;
+      const dim = parseInt(dimensionSelect.value);
+      let v1 = [], v2 = [];
+      for (let i = 1; i <= dim; i++) {
+        v1.push(parseFloat(document.getElementById(`v1${i}`).value) || 0);
+        v2.push(parseFloat(document.getElementById(`v2${i}`).value) || 0);
+      }
 
-      let ax = parseFloat(document.getElementById("ax").value) || 0;
-      let ay = parseFloat(document.getElementById("ay").value) || 0;
-      let az = parseFloat(document.getElementById("az").value) || 0;
-      let bx = parseFloat(document.getElementById("bx").value) || 0;
-      let by = parseFloat(document.getElementById("by").value) || 0;
-      let bz = parseFloat(document.getElementById("bz").value) || 0;
-
-      let resultado = "";
-
-      if (operacion === "punto") {
-        if (dim == "2") {
-          resultado = "Producto punto = " + (ax*bx + ay*by);
+      let res = "";
+      if (operacionSelect.value === "punto") {
+        let dot = v1.reduce((acc, val, i) => acc + val * v2[i], 0);
+        res = `Producto Punto = ${dot}`;
+      } else {
+        if (dim === 2) {
+          let cross = v1[0] * v2[1] - v1[1] * v2[0];
+          res = `Producto Cruz (2D) = ${cross} k`;
         } else {
-          resultado = "Producto punto = " + (ax*bx + ay*by + az*bz);
-        }
-      } else if (operacion === "cruz") {
-        if (dim == "2") {
-          resultado = "❌ El producto cruz no aplica en 2D";
-        } else {
-          let cx = ay*bz - az*by;
-          let cy = az*bx - ax*bz;
-          let cz = ax*by - ay*bx;
-
-          let cruzStr = "";
-          if (cx !== 0) cruzStr += (cx > 0 ? " + " : " - ") + Math.abs(cx) + "i";
-          if (cy !== 0) cruzStr += (cy > 0 ? " + " : " - ") + Math.abs(cy) + "j";
-          if (cz !== 0) cruzStr += (cz > 0 ? " + " : " - ") + Math.abs(cz) + "k";
-
-          if (cruzStr.startsWith(" + ")) cruzStr = cruzStr.slice(3);
-          if (cruzStr.startsWith(" - ")) cruzStr = "-" + cruzStr.slice(3);
-
-          resultado = "Producto cruz = " + cruzStr;
+          let i = v1[1] * v2[2] - v1[2] * v2[1];
+          let j = -(v1[0] * v2[2] - v1[2] * v2[0]);
+          let k = v1[0] * v2[1] - v1[1] * v2[0];
+          res = `Producto Cruz (3D) = ${i} i + ${j} j + ${k} k`;
         }
       }
 
-      document.getElementById("resultado").innerHTML = resultado;
+      document.getElementById("resultado").innerText = res;
     }
-
-    cambiarDimension();
   </script>
 </body>
-
 </html>
